--- a/TensorFlow/LanguageModeling/BERT/trt/Dockerfile
+++ b/TensorFlow/LanguageModeling/BERT/trt/Dockerfile
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-FROM nvcr.io/nvidia/tensorrt:19.12-py3
+FROM nvcr.io/nvidia/tensorrt:20.01-py3
 
 LABEL maintainer="NVIDIA CORPORATION"
 
@@ -58,7 +58,7 @@ RUN pip install -r /tmp/requirements.txt
 
 # Build with extra flags to enable plugins available on SM 70/75
 RUN git clone https://github.com/NVIDIA/TensorRT.git --recursive && cd TensorRT
-RUN cd TensorRT && git checkout 77af534c21b7e1bfa322ccbab028477be4c56eb3 && git submodule update --init --recursive && mkdir build && cd build && cmake .. -DCMAKE_CUDA_FLAGS="--expt-relaxed-constexpr --expt-extended-lambda -gencode arch=compute_70,code=sm_70 -gencode arch=compute_75,code=sm_75" && make -j nvinfer_plugin
+RUN cd TensorRT && git checkout release/7.0 && git submodule update --init --recursive && mkdir build && cd build && cmake .. -DCMAKE_CUDA_FLAGS="--expt-relaxed-constexpr --expt-extended-lambda -gencode arch=compute_70,code=sm_70 -gencode arch=compute_75,code=sm_75" && make -j nvinfer_plugin
 # Replace the default plugin library with the open-source plugins
 RUN cp TensorRT/build/libnvinfer_plugin.so* /usr/lib/x86_64-linux-gnu/
 
